5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1728_2497.log
== TEST (2019-05-10 15:54:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = teste

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:54:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = teste

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:55:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste >= 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = teste

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste >= 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:56:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste => 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = teste

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    while (teste => 1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 15:59:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = teste

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    t = teste
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:00:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = tempo 

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 16:03:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t == tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = tempo 

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.186437
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:

-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:

-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:06:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t == tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = tempo 

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 16:07:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = tempo 

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:43:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:44:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend

print(round(saldo, 2)) # Exibicao de resultados
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:46:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
   t == tempo
	
	print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
File "XXXX", line 17
    t == tempo
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:47:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
   t = tempo
	
	print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
File "XXXX", line 17
    t = tempo
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:08:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t <= tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
   t = tempo
	
print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
File "XXXX", line 17
    t = tempo
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
